# cupra-flow

./: .gitignore  Cargo.toml  Cargo.toml.full  README.md  sb-service.json
.cargo/: config.toml
.github/workflows/: release.yml
config/: config.toml
docs/: CARGO_FIX.md  CHECKLIST.md  GITHUB_SETUP.md
scripts/: build.bat  install.ps1  test-service.bat
src/: cli.rs  config.rs  main.rs  service.rs
