[package]
name = "cupraflow"
version = "0.1.0"
edition = "2021"
authors = ["CupraFlow Team"]
description = "Agente de gestion de red y balanceo de carga"
license = "MIT"
repository = "https://github.com/sb-mcampoe/cupraflow"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
anyhow = "1.0"

[target.'cfg(windows)'.dependencies]
# windows-service se anadira en el Hito 1.2

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"

[[bin]]
name = "cupraflow"
path = "src/main.rs"
